static/stylesheet.css
/* ... */
.pptborder3{
 border: 5px solid #0098fffc;
 display: inline-block;
  height: 150px;
  width: 180px;
}
.marginbt13{
    margin-top: 13px;
}
.newsred {
    font-size: 36px;
    color: #FF7474;
    font-family: 'avenir next demi bold', sans-serif;
}
.newsblue {
    font-size: 36px;
    color:rgba(0, 131, 196, 0.75);
    font-family: 'avenir next demi bold', sans-serif;
}
.contentbox {
    padding: 5px;
    margin-top: 20px;
}
.contentresource {
    margin-bottom: 80px !important;
}

.firstPieChart{
 padding: 20px;
}

.icons {
    margin: 0 auto;
    display: block;
    width: 338px;
}
.txtcontent {
    font-size: 18px;
    color: #404040;
    font-family: 'avenir next regular', sans-serif;
}
.txtsmallcontent {
    font-size: 12px;
    color: #404040;
    font-family: 'avenir next regular', sans-serif;
    margin-left:130px;
}
.txtsmallcontenttwo{
    font-size: 12px;
    color: #404040;
    font-family: 'avenir next regular', sans-serif;
    margin-left:160px;
}
.smalltxt {
    font-size: 18px;
    color: #404040;
    font-family: 'avenir next regular', sans-serif;
}
.posit {
    font-size: 16px;
    color: #0083C4;
    font-family: 'avenir next regular', sans-serif;
    font-style: italic;
}
.iconlabel {
    display: inline;
    font-size: 14px;
    color: #404040;
}

#back {
    position: absolute;
    width: 100vw;
    left: 0;
    z-index: -1;
    top:85px;
    background-attachment: scroll;
}
#fore {
    position: absolute;
    z-index: 1;
    width: 100vw;
    top:85px;
    background-attachment: scroll;
}
.frontimg {
    width: 100vw;
    position: absolute;
}

/* #frontcaption {
    position: fixed;
    top: calc(75vw * 0.506 / 2);
    right: 0%;
    width: 40%;
    background: linear-gradient(to right, rgba(255,255,255,0.15), rgba(255,255,255,0.7));
    color: #404040;
    padding-top: 15px;
    padding-bottom: 15px;
} */

.col-sm-4 {
    width: 33.33333333%;
    padding-top: 20px;
}
.col-sm-4index {
    color: rgba(0,0,0,0.75);
    right: 55% !important;
    background: linear-gradient(to right, rgba(255,255,255,0.10), rgba(255,255,255,0.7));
    top: 25rem;
    padding-top: 15px;
    padding-bottom: 15px;
    width: 55% !important;
    margin-top: 240px;
    margin-left: 742px;
}
.iconbox {
    display: inline-block;
    padding-left: 15px;
    padding-right: 15px;
    text-decoration: none;
}
.iconbox:hover {
    text-decoration: none;
}
.iconbox:active {
    text-decoration: none;
}
@media only screen and (min-width: 1000px) {
    .iconbox {
        padding-left: 20px;
        padding-right: 20px;
    }
    .icons {
        width: 500px;
    }
    .iconimg {
        width: 80px;
    }
}
@media only screen and (min-width: 1600px) {
    .col-sm-4index {
    color: rgba(0,0,0,0.75);
    right: 55% !important;
    background: linear-gradient(to right, rgba(255,255,255,0.10), rgba(255,255,255,0.7));
    top: 25rem;
    padding-top: 15px;
    padding-bottom: 15px;
    width: 55% !important;
    margin-top: 240px;
    margin-left: 942px;
    }
}

@media only screen and (max-width: 1536px) {
    .col-sm-4index {
    color: rgba(0,0,0,0.75);
    right: 55% !important;
    background: linear-gradient(to right, rgba(255,255,255,0.10), rgba(255,255,255,0.7));
    top: 25rem;
    padding-top: 15px;
    padding-bottom: 15px;
    width: 55% !important;
    margin-top: 240px;
    margin-left: 842px;
    }
}


@media only screen and (max-width: 999px) {
    .iconimg {
        width: 80px
    }
}
@media only screen and (max-width: 420px) {
    .cap {
        font-size: 8px;
        text-align: left;
        font-family: 'avenir next regular', sans-serif;
    }
    .cap2 {
        font-size: 10px;
        text-align: left;
        font-family:'avenir next regular', sans-serif;
        padding-left: 30px;
    }
}
@media only screen and (min-width: 421px) and (max-width: 599px) {
    .cap {
        font-size: 12px;
        text-align: left;
        font-family:'avenir next regular', sans-serif;
        padding-left: 30px;
    }
    .cap2 {
        font-size: 14px;
        text-align: left;
        font-family: 'avenir next regular', sans-serif;
        padding-left: 30px;

    }
}
@media only screen and (min-width: 600px) and (max-width: 940px) {
    .cap {
        font-size: 14px;
        text-align: left;
        font-family: 'avenir next regular', sans-serif;
        padding-left: 30px;
    }
    .cap2 {
        font-size: 16px;
        text-align: left;
        font-family: 'avenir next regular', sans-serif;
        padding-left: 30px;
    }
}
@media only screen and (min-width: 940px) {
    .cap {
        font-size: 24px;
        text-align: left;
        font-family: 'avenir next regular', sans-serif;
        padding-left: 30px;
    }
    .cap2 {
        font-size: 30px;
        text-align: left;
        font-family:'avenir next regular', sans-serif;
        padding-left: 30px;
    }
}

@media only screen and (max-width: 420px) {
    .cap {
        font-size: 8px;
        text-align: left;
        font-family: 'avenir next regular', sans-serif;
        padding-left: 30px;
    }
    .cap2 {
        font-size: 10px;
        text-align: left;
        font-family: 'avenir next regular', sans-serif;
        padding-left: 30px;
    }
    .navbtn {
    color: rgba(0,0,0,0.75);
    background-color: #FFFFFF;
    padding-top: 30px;
    padding-bottom: 30px;
    padding-right: 15px;
    padding-left: 15px;
    font-size: 18px;
    border: none;
    font-family: 'avenir next bold', sans-serif;
    font-weight: bold;
    cursor: pointer;
    vertical-align: middle;
    position: relative;
    display: inline-block;
    float: right;
    width: 75px;
    }

}




.iconlabel {
    font-family: 'avenir next regular', sans-serif;
    font-size: 14;
    font-weight: bold;
}
.narrow {
    max-width: 900px;
    margin: auto 0;
    top: 90%;
    margin: auto;
    background: #FFFFFF;
    z-index: 2;
    display: block;
    position: relative;
    padding:15px;
}
/* ... */

